--- a/modules/products/client/views/view-product.client.view.html
+++ b/modules/products/client/views/view-product.client.view.html
@@ -1,12 +1,9 @@
 <section>
-   <div class="page-header">
-    <h1><span ng-bind="vm.product.name"></span><small>Posted in {{ vm.product.catalog_id }}</small></h1>
-    <div ng-bind="vm.product.description"></div>
-    <br>
-    <p>Tags: <strong>{{ vm.product.tags }}</strong></p>
+  <div class="page-header">
+    <h1 ng-bind="vm.product.name"></h1>
   </div>
   <div class="pull-right"
-       ng-show="vm.post.isCurrentUserOwner">
+       ng-show="vm.product.isCurrentUserOwner">
     <a class="btn btn-primary"
        ui-sref="products.edit({ productId: vm.product._id })">
       <i class="glyphicon glyphicon-edit"></i>
