--- a/modules/catalogs/client/views/list-catalogs.client.view.html
+++ b/modules/catalogs/client/views/list-catalogs.client.view.html
@@ -22,7 +22,7 @@ class="glyphicon glyphicon-list"> </span> Danh Sách Danh Mục</p>
 			  <td> 
 			    <a ui-sref="catalogs.view({ catalogId: catalog._id })" class="btn btn-info"> Show  </a>
 			    <a ui-sref="catalogs.edit({ catalogId: catalog._id })" class="btn btn-success"><span class="glyphicon glyphicon-edit"> </span> Edit  </a>
-			  	<button type="button" class="btn btn-danger" data-ng-click="remove(catalog)" >
+			  	<button type="button" class="btn btn-danger" ng-click="remove()" >
 						  <span class="glyphicon glyphicon-trash"> </span> Delete 
 					</button>
 			  </td>
