--- a/modules/customers/client/views/form-customer.client.view.html
+++ b/modules/customers/client/views/form-customer.client.view.html
@@ -6,14 +6,24 @@
     <form name="vm.form.customerForm" class="form-horizontal" ng-submit="vm.save(vm.form.customerForm.$valid)" novalidate>
       <fieldset>
         <div class="form-group" show-errors>
-          <label class="control-label" for="name">Name</label>
+          <label class="control-label" for="name">Tên Khách Hàng</label>
           <input name="name" type="text" ng-model="vm.customer.name" id="name" class="form-control" placeholder="Name" required>
-          <div ng-messages="vm.form.customerForm.name.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Customer name is required.</p>
-          </div>
+        </div>
+        <div class="form-group" show-errors>
+          <label class="control-label" for="email">Email</label>
+          <input name="email" type="text" ng-model="vm.customer.email" id="email" class="form-control" placeholder="Tên Khách Hàng" required>
+        </div>
+        <div class="form-group" show-errors>
+          <label class="control-label" for="phone">Số Điện Thoại</label>
+          <input name="phone" type="text" ng-model="vm.customer.phone" id="phone" class="form-control" placeholder="Số Điện Thoại" required>
+        </div>
+        <div class="form-group" show-errors>
+          <label class="control-label" for="address">Địa chỉ</label>
+          <input name="address" type="text" ng-model="vm.customer.address" id="address" class="form-control" placeholder="Địa chỉ" required>
         </div>
         <div class="form-group">
           <button type="submit" class="btn btn-default">{{vm.customer._id ? 'Update' : 'Create'}}</button>
+          <a ui-sref="customers.list" class="btn btn-default"> Cancel</a>
         </div>
         <div ng-show="vm.error" class="text-danger">
           <strong ng-bind="vm.error"></strong>
