--- a/modules/orders/client/views/list-orders.client.view.html
+++ b/modules/orders/client/views/list-orders.client.view.html
@@ -1,20 +1,40 @@
 <section>
   <div class="page-header">
-    <h1>Orders</h1>
+   <p class="panel-title"><span style="color:#5bc0de;" 
+class="glyphicon glyphicon-list"> </span> Danh Sách Đơn Hàng</p>
+   <div class="header clearfix" style="margin-left: 700px; margin-top: -20px; "><a ui-sref="orders.create"> 
+			    <span class="glyphicon glyphicon-plus"> </span>Thêm Mới Đơn Hàng</a></div>
   </div>
   <div class="list-group">
-    <a ng-repeat="order in vm.orders"
-       ui-sref="orders.view({ orderId: order._id })"
-       class="list-group-item">
-      <small class="list-group-item-text">
-        Posted on
-        <span ng-bind="order.created | date:'mediumDate'"></span>
-        by
-        <span ng-if="order.user" ng-bind="order.user.displayName"></span>
-        <span ng-if="!order.user">Deleted User</span>
-      </small>
-      <h4 class="list-group-item-heading" ng-bind="order.name"></h4>
-    </a>
+   <table class="table table-striped">
+			<thead>
+			<tr>
+				<th>ID</th>
+				<th>Tên Khách Hàng</th>
+			  <th>Tên Sản Phẩm</th>
+			  <th>Số Lượng</th>
+			  <th>Giá Theo Số Lượng</th>
+			  <th>Trạng Thái</th>
+			</tr>
+			</thead>
+			<tbody>
+			<tr ng-repeat="order in vm.orders" >
+				<td>{{ order._id }}</td>
+				<td>{{ order.customer_id }}</td>
+				<td>{{ order.product_id }}</td>
+			  <td>{{ order.qty }}</td>
+			  <td>{{ order.price }}</td>
+			  <td>{{ order.status }}</td>
+			  <td> 
+			    <a ui-sref="orders.view({ orderId: order._id })" class="btn btn-info"> Show  </a>
+			    <a ui-sref="orders.edit({ orderId: order._id })" class="btn btn-success"><span class="glyphicon glyphicon-edit"> </span> Edit  </a>
+			  	<button type="button" class="btn btn-danger" ng-click="remove()" >
+						  <span class="glyphicon glyphicon-trash"> </span> Delete 
+					</button>
+			  </td>
+			</tr>
+			</tbody>
+		</table>		
   </div>
   <div class="alert alert-warning text-center" ng-if="vm.orders.$resolved && !vm.orders.length">
     No Orders yet, why don't you <a ui-sref="orders.create">create one</a>?
